moved filed "volume" from details to description

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "f9dae556-ee3b-4708-ac2d-4dbc4051ebc5",
    "metadata": {},
    "outputs": [],
@@ -21,12 +21,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "e45305cb-f5cb-432f-a0b7-9fe98da7e597",
    "metadata": {},
    "outputs": [],
    "source": [
-    "db_name = 'iowa_liqour_sales'\n",
+    "db_name = 'iowa_liquor_sales'\n",
     "user = 'postgres'\n",
     "password = 'postgres'\n",
     "\n",
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "f81e380d-14d0-4412-874d-b944e287b164",
    "metadata": {},
    "outputs": [],
@@ -68,12 +68,13 @@
     "###### JOIN store USING(zip_code)  \n",
     "###### JOIN sale USING(store_name)  \n",
     "###### JOIN details USING(invoice)  \n",
-    "###### ORDER BY volume DESC  "
+    "###### JOIN description USING(item_num)\n",
+    "###### ORDER BY volume DESC"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "0b92caed-9545-4470-b173-79a9af660f7c",
    "metadata": {},
    "outputs": [
@@ -141,14 +142,14 @@
        "4  Clear Lake          1500"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "query = db.select([store_loc.c.city, (details.c.volume * details.c.quantity).label('total_volume')])\n",
-    "query = query.select_from(store_loc.join(store).join(sale).join(details)).order_by(db.desc(details.c.volume))\n",
+    "query = db.select([store_loc.c.city, (description.c.volume * details.c.quantity).label('total_volume')])\n",
+    "query = query.select_from(store_loc.join(store).join(sale).join(details).join(description)).order_by(db.desc(description.c.volume))\n",
     "result_1 = pd.DataFrame(connection.execute(query).fetchall())\n",
     "result_1"
    ]
@@ -168,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "63b22bce-349b-4e1d-b997-aaa7744d5f87",
    "metadata": {},
    "outputs": [
@@ -228,7 +229,7 @@
        "2        Wapello Jack and Jill               Jagermeister Liqueur  18.06"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +248,7 @@
     "tags": []
    },
    "source": [
-    "###### *3. Відсортувати сумарні продажі за часом*  \n",
+    "###### *3. Відсортувати сумарні продажі у штаті за часом*  \n",
     "###### SELECT (quantity * retail) AS total_retail, sale_date  \n",
     "###### FROM sale  \n",
     "###### JOIN details USING(invoice)  \n",
@@ -256,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "bf1a40c2-eeef-4e12-b71a-fb545c1302d8",
    "metadata": {},
    "outputs": [
@@ -324,7 +325,7 @@
        "4        25.98  2017-07-14"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "a766583a-c6de-44f1-a482-d10e2a05f08c",
    "metadata": {},
    "outputs": [],
@@ -356,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "7debab37-7c89-446b-8981-0d05846331ba",
    "metadata": {},
    "outputs": [
